blog section overflow issue solved

--- a/src/homecomps/blogsHome.css
+++ b/src/homecomps/blogsHome.css
@@ -4,6 +4,7 @@
   justify-content: center;
   flex-direction: column;
   margin-bottom: 100px;
+  margin-top: 100px;
 }
 
 .blogs-home-wrapper {
